frontend/src/darkMode.css
.dark {
    background-color: #333;
    color: #fff;

}

.light {
    background-color: #fff;
    color: #333;
}

/* Light mode */
.light .dropdown-menu {
    background-color: #fff;
    color: #333;
  }
  
  /* Dark mode */
  .dark .dropdown-menu {
    background-color: #bdb9b9;
    color: #fff;
  }
  
  /* Light mode */
.light select {
    background-color: #fff;
    color: #333;
    border: 1px solid #ccc;
  }
  
  /* Dark mode */
  .dark select {
    background-color: #333;
    color: #fff;
    border: 1px solid #777;
  }

  /* Light mode */
  .list-group-item {
    background-color: #fff;
    color: #333;
  }
  
  /* Dark mode */
  .dark .list-group-item {
    /* background-color: #333; */
    background-color: #000000;
    color: #ffffff;
  }

  /* Dark mode table */
.dark table {
  background-color: #343a40;
  
  border-color: #010101;
}

.dark .table-dark tbody td {
  color: white;
}

/* .dark table td */
.dark table thead th {
  border-color: #010101;
  background-color: #201182;
  color: white;
}

.light table  {
  border-color: #010101;
  
}

.light table thead th {
  border-color: #000000;
  border-width: 1px;
  background-color: #2f287f;
  color: white;
}


.dark table.table-striped tbody tr:nth-of-type(odd) {
  background-color: rgba(122, 118, 118, 0.386);
  color:white;
}

.dark table.table-hover tbody tr:hover {
  background-color: rgba(255, 255, 255, 0.075);
}

.dark table.table-striped tbody td {
  color: white;
}

/* Light mode */
.light select:disabled {
  background-color: #ccc;
  color: #000;
  border: 1px solid #ccc;
}

/* Dark mode */
.dark select:disabled {
  background-color: #777474;
  color: #fff;
  border: 1px solid #777;
}

.light select:disabled:hover {
  background-color: #ccc;
  color: #000;
  border: 1px solid #ccc;
}

/* Dark mode */
.dark select:disabled:hover {
  background-color: #777474;
  color: #fff;
  border: 1px solid #777;
}

/* Light mode */
.light select:hover {
  background-color: #f5f5f5;
  color: #333;
}

/* Dark mode */
.dark select:hover {
  background-color: #666;
  color: #fff;
}

